--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 /* @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"); */
 @import url('https://fonts.googleapis.com/css2?family=Alike&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -36,8 +37,6 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
-
-
 
 p {
   @apply leading-[1.6];
