--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 /* @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"); */
+@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@800&family=Cinzel:wght@400..900&family=Fira+Code:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alike&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
